# learn_tg_bot

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  README.rst  bot.py  docker-compose_setting  locations.json  pyproject.toml  requirements.txt  server.db  setup.cfg  test2.py  tesy.py
bot/: __main__.py  db.py  filter_cv.py  get_cv.py  handlers.py  keyboards.py  payments.py  personal_area.py  settings.py  utils.py
bot_project/: anketa.py  bot.py  db.py  db2.py  db3.py  filter_cv.py  handlers.py  models.py  test.py  utils.py
bot_project/DbFolder/: db.py  db_file.py  models.py
bot_project/bd_dict/: bd.py
bot_project_new/: Dockerfile  bot.py  cv_keyboards.py  filter_cv.py  find_cv.py  get_cv.py  get_cv_new.py  handlers.py  keyboards.py  payments.py  personal_area.py  utils.py
bot_project_new/DbFolder/: db_file.py  db_file_old.py
tests/: test_bot_project.py
